--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Srinithi C- Portfolio</title>
@@ -144,22 +144,12 @@
                 <li><a href="#">project 2</a></li>
                 <!-- Add more project links here -->
             </ul>
-        </div>
-    </section>
-
-    <section id="resume">
-    
-        <div class="section-content">
-            <center>
-            <h2>Resume</h2>
-            <a href="logeshwaran resume.pdf" target="_blank" class="download-button">Download CV</a>
-        </center>
-        </div>
+        </div 
         
     </section>
 
     <footer>
-        <p>&copy; 2023 Logeshwaran P</p>
+        <p>&copy; 2023  Srinidhi </p>
     </footer>
 
     <script>
